iptables.conf
# Generated by xtables-save v1.8.2 on Tue Nov 19 19:16:17 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:port-scanning - [0:0]
-A INPUT -i enp0s3 -m conntrack --ctstate INVALID -j DROP
-A INPUT -i enp0s3 -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP
-A INPUT -i enp0s3 -f -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,PSH,URG -j DROP
-A INPUT -i enp0s3 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A port-scanning -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec --limit-burst 2 -j RETURN
-A port-scanning -j DROP
COMMIT
# Completed on Tue Nov 19 19:16:17 2019
